# wase-ecs

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build.yml
src/: component.h  component_array.h  component_array.inl  component_pool.cpp  component_pool.h  component_pool.inl  ecs.h  entity.cpp  entity.h  entity.inl  entity_filter.cpp  entity_filter.h  entity_filter.inl  entity_pool.cpp  entity_pool.h  system.cpp  system.h  system_pool.cpp  system_pool.h  system_pool.inl  type_id.cpp  type_id.h  type_id.inl  world.cpp  world.h  world.inl
tests/: CMakeLists.txt  component_array_test.cpp  component_pool_test.cpp  entity_filter_test.cpp  entity_pool_test.cpp  entity_test.cpp  system_test.cpp  world_test.cpp
